@@ -235,6 +235,9 @@ setMethod("DMetaData", "TextDocCol",
                   db <- dbInit(DBControl(object)[["dbName"]], DBControl(object)[["dbType"]])
                   result <- dbFetch(db, "DMetaData")
                   dbDisconnect(db)
+                  index <- object@DMetaData[1, "subset"]
+                  if (!is.na(index))
+                      result <- result[index,]
                   return(result)
               }
               else
@@ -247,6 +250,7 @@ setReplaceMethod("DMetaData", "TextDocCol",
                          db <- dbInit(DBControl(x)[["dbName"]], DBControl(object)[["dbType"]])
                          db[["DMetaData"]] <- value
                          dbDisconnect(db)
+                         x@DMetaData[1, "subset"] <- NA
                          return(x)
                      }
                      else {
